wip adding line and minor improvements

--- a/css/style.css
+++ b/css/style.css
@@ -1657,59 +1657,6 @@ input:checked + .slider:before {
 
 /*--  --*/
 
-/*!-- MovileFirst Design --*/
-
-/* xs */
-@media (min-width: 475px) {
-  #footerTop {
-    justify-content: space-between;
-    padding: 10px 30px 10px 30px;
-  }
-
-  .busImage {
-    width: 100%;
-    transform: none;
-  }
-
-  .container {
-    max-width: 475px;
-  }
-
-  .userName.button svg {
-    display: none;
-  }
-
-  .userName.button {
-    font-size: var(--font-xs);
-    width: auto;
-    height: auto;
-    text-transform: uppercase;
-    padding: 5px 7px;
-  }
-
-  .userName.button.logged {
-    font-size: var(--font-sm);
-  }
-
-  label[for="usernameL"] span,
-  label[for="usernameR"] span,
-  label[for="passwordConfirm"] span,
-  label[for="email"] span,
-  label[for="birthdate"] span {
-    font-size: var(--font-sm);
-    top: min(7px, 1vh);
-  }
-
-  label[for="usernameL"] span.top,
-  label[for="usernameR"] span.top,
-  label[for="passwordConfirm"] span.top,
-  label[for="email"] span.top,
-  label[for="birthdate"] span.top {
-    left: 2px;
-    top: -25px;
-  }
-}
-
 .desplegableContent.container#form {
   margin: 0px;
 }
@@ -1736,7 +1683,89 @@ fieldset {
 #stopsList {
   display: flex;
   flex-wrap: wrap;
-  gap: 10px;
+  align-items: center;
+}
+
+#stopsList li {
+  display: inline-flex;
+  min-width: fit-content;
+  transition: 0.25s;
+}
+
+#stopsList li span {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  min-width: fit-content;
+  height: 20px;
+  border-radius: 10px;
+  transition: 0.25s;
+}
+
+#stopsList li p {
+  position: relative;
+  min-width: 10px;
+  width: 10px;
+  height: 20px;
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  transition: 0.15s;
+}
+
+#stopsList li p::before,
+#stopsList li p::after {
+  width: 0px;
+  height: 0px;
+  border-radius: 2px;
+  content: "";
+  position: absolute;
+  background-color: var(--tertiary-color);
+  transition: 0.15s;
+}
+
+#stopsList li p::before {
+  height: 2px;
+  inset: calc(50% - 1px) calc(50% - 1px) 6px 6px;
+}
+
+#stopsList li p::after {
+  width: 2px;
+  inset: calc(50% - 1px) calc(50% - 1px) calc(50% - 1px) calc(50% - 1px);
+}
+
+/*TODO add stop between two stops*/
+/* #stopsList li p:hover {
+  width: 20px;
+} */
+
+/* #stopsList li p:hover::before {
+    width: 8px;
+  }
+
+  #stopsList li p:hover::after {
+    height: 8px;
+    inset: 6px 6px calc(50% - 1px) calc(50% - 1px);
+  } */
+
+#stopsList li span::before {
+  display: inline-flex;
+  content: "";
+  width: 0px;
+  height: 2px;
+  border-radius: 2px;
+  background-color: var(--tertiary-color);
+  transition: 0.15s;
+}
+
+#stopsList li span:hover {
+  background-color: var(--white-color);
+  padding: 0 5px 0 5px;
+}
+
+#stopsList li span:hover::before {
+  width: 7px;
+  margin-right: 3px;
 }
 
 .desplegableContent.container#form label[for="addStop"] {
@@ -1745,7 +1774,8 @@ fieldset {
 
 /*----*/
 
-/*!--busReserve--*/
+/*!-- busReserve --*/
+
 .busReserveMain {
   display: flex;
   flex-direction: column;
@@ -2061,6 +2091,59 @@ select:focus-visible {
 }
 
 /*----*/
+
+/*!-- MovileFirst Design --*/
+
+/* xs */
+@media (min-width: 475px) {
+  #footerTop {
+    justify-content: space-between;
+    padding: 10px 30px 10px 30px;
+  }
+
+  .busImage {
+    width: 100%;
+    transform: none;
+  }
+
+  .container {
+    max-width: 475px;
+  }
+
+  .userName.button svg {
+    display: none;
+  }
+
+  .userName.button {
+    font-size: var(--font-xs);
+    width: auto;
+    height: auto;
+    text-transform: uppercase;
+    padding: 5px 7px;
+  }
+
+  .userName.button.logged {
+    font-size: var(--font-sm);
+  }
+
+  label[for="usernameL"] span,
+  label[for="usernameR"] span,
+  label[for="passwordConfirm"] span,
+  label[for="email"] span,
+  label[for="birthdate"] span {
+    font-size: var(--font-sm);
+    top: min(7px, 1vh);
+  }
+
+  label[for="usernameL"] span.top,
+  label[for="usernameR"] span.top,
+  label[for="passwordConfirm"] span.top,
+  label[for="email"] span.top,
+  label[for="birthdate"] span.top {
+    left: 2px;
+    top: -25px;
+  }
+}
 
 /* sm */
 @media (min-width: 640px) {
