--- a/css/style.css
+++ b/css/style.css
@@ -115,6 +115,31 @@
   }
 }
 
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes borderAnimtion {
+  0% {
+    width: 50px;
+  }
+
+  50% {
+    width: 30px;
+    height: 30px;
+  }
+
+  100% {
+    width: 50px;
+  }
+}
+
 /*----*/
 
 /*!-- ScrollBar --*/
@@ -258,6 +283,16 @@ main {
 .slideIn {
   display: block;
   animation: slideIn 0.25s forwards, fadeOut 0.5s 2s forwards;
+}
+
+.loadingDiv {
+  position: relative;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  animation: linear spin infinite 1.5s;
+  border: 4px solid;
+  border-color: var(--secondary-color) transparent transparent transparent;
 }
 
 /*----*/
