--- a/css/style.css
+++ b/css/style.css
@@ -1548,7 +1548,7 @@ legend {
   display: flex;
 }
 
-.unitInfo {
+.unitInfo, .travelReservationSection {
   background-color: var(--whitesmoke-color);
   text-align: left;
   padding: 25px;
@@ -2306,6 +2306,56 @@ select:focus-visible {
   flex-direction: column;
   padding-left: 5vw;
   padding-right: 5vw;
+  text-wrap: balance;
+}
+
+.ticketContent>section{
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  
+}
+
+.ticketContent>section>p{
+  width: calc(50% - 5px);
+  text-align: center;
+}
+
+.ticketContent .seatNumber{
+  margin-bottom: 25px;
+  text-wrap: balance;
+  background-color: var(--whitesmoke-color);
+  border-radius: 15px;
+  padding: 15px;
+  text-align: center;
+  margin-left: 20%;
+  margin-right: 20%;
+}
+
+.travelReservationSection {
+  padding-top: 15px;
+  text-wrap: balance;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.travelReservationSection .subtitle{
+  display: block;
+}
+
+.travelReservationSection p{
+  align-items: center;
+  display: flex;
+  gap: 10px;
+}
+
+.travelReservationSection span{
+  display: block;
+  padding-left: 10px;
+  border-left: solid 1px var(--primary-color);
+  color: var(--tertiary-color);
 }
 
 /*----*/
